--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ FLASK_APP=app.py
 FLASK_ENV=development
 SECRET_KEY=supersecretkey
 JWT_SECRET_KEY=jwtsecretkey
-DATABASE_URI=mysql+pymysql://root@localhost/inventory_db
+DATABASE_URI=mysql+pymysql://root@localhost/inventory
